--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<h2> Workshop A</h2>
-	<img src="/img/Ping1.png" alt="Hobby" height="300" width="300" /><img src="/img/Pc.png" alt="Hobby" height="300" width="500" />
+	<img src="Ping1.png" alt="Hobby" height="300" width="300" /><img src="Pc.png" alt="Hobby" height="300" width="500" />
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/_WH6cbwZ5m8" frameborder="0"
 		allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<table>
